# avrprog2-code

./: 60-avrpog.rules  60-avrprog.rules  Doxyfile.in  Makefile.am  README.md  changelog.txt  configure.ac  doc.txt  man.txt.in  readme.txt
branches/1.0/: Doxyfile_man.in  man.txt.in
branches/1.0/src/: CAVRDevice.h  CAVRprog.h  CEEPROMOptions.cpp  CFormat.cpp
branches/1.2/: Doxyfile.in  changelog.txt
branches/1.2/src/: CAVRDevice.h  CAVRprog.cpp  CAVRprog.h  CAvrProgCommands.h  CEEPROMOptions.h  CFlashOptions.h  CFusesOptions.cpp  CHexFile.cpp  CHexFile.h  COut.h  CProgramOptions.cpp  CProgramOptions.h  CUSBCommunication.cpp  MyException.cpp  MyException.h  avrprog.h
branches/1.3/: changelog.txt  configure.ac
branches/1.3/config/: atmega128.xml
branches/1.3/src/: CAVRprog.cpp  CFormat.cpp  main.cpp
branches/dev-gui/gui/: readme.txt~
branches/dev-gui/gui/build-AvrProg2_LinuxGui-Desktop_Qt_5_4_1_GCC_64bit-Debug/: AvrProg2_LinuxGui  moc_mainwindow.cpp
branches/dev-gui/gui/build-AvrProg2_LinuxGui-Desktop_Qt_5_4_1_GCC_64bit-Release/: ui_mainwindow.h
branches/dev-gui/gui/src/: AvrProg2_LinuxGui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
branches/dev-gui/src/: CAvrProgCommands.cpp  CLArgumentException.h  CMemoryOptions.h
branches/page_size_config/: changelog.txt
branches/page_size_config/config/: atmega128.xml  atmega1280.xml  atmega2560.xml
branches/page_size_config/src/: CAVRDevice.cpp  CAVRDevice.h  CAVRprog.cpp  CAVRprog.h  CAvrProgCommands.cpp  CAvrProgCommands.h  CFlashOptions.cpp  CFormat.cpp  CFormat.h  CFusesOptions.h  CProgressbar.h  avrprog.h  main.cpp
debian/: changelog  control  copyright  docs  install  manpages  rules  watch
gui/: readme.txt  readme.txt~
gui/build-AvrProg2_LinuxGui-Desktop_Qt_5_4_1_GCC_64bit-Debug/: AvrProg2_LinuxGui  Makefile
gui/build-AvrProg2_LinuxGui-Desktop_Qt_5_4_1_GCC_64bit-Release/: AvrProg2_LinuxGui  Makefile
gui/src/: mainwindow.cpp.autosave
src/: CAVRDevice.cpp  CAVRprog.cpp  CAVRprog.h  CAvrProgCommands.cpp  CFormat.h  CHexFile.cpp  CMemoryOptions.cpp  CProgramOptions.cpp  CUSBCommunication.cpp  CUSBCommunication.h  ExceptionBase.cpp  avrprog.h  main.cpp
tags/1.0.0/: Makefile.am  configure.ac
tags/1.0.0/src/: CAvrProgCommands.h  main.cpp
tags/1.0.1/: Doxyfile.in  Makefile.am  changelog.txt  configure.ac  readme.txt
tags/1.0.1/src/: CUSBCommunication.h  main.cpp
tags/1.1.0/: changelog.txt  configure.ac
tags/1.1.0/config/: atmega128.xml  atmega1280.xml  atmega2560.xml
tags/1.1.0/src/: CAVRDevice.cpp  CAVRprog.cpp  main.cpp
tags/1.2.1/: autoclean.sh
tags/1.2.1/src/: CAvrProgCommands.cpp  CLArgumentException.cpp
tags/1.3.0/src/: CMemoryOptions.h
tags/1.3.1/: changelog.txt  man.txt.in
tags/1.3.1/src/: CAVRprog.h  CAvrProgCommands.h  CUSBCommunication.cpp
tags/1.4.0/: Makefile.am  man.txt.in
tags/1.4.0/config/: atmega16.xml
tags/1.4.0/src/: CAVRDevice.h  CAVRprog.cpp  CAVRprog.h  CAvrProgCommands.cpp  CFusesOptions.cpp  CHexFile.cpp  CLArgumentException.cpp  COut.cpp  CProgramOptions.cpp  CProgramOptions.h  CProgressbar.cpp  avrprog.h
tags/1.4.1/: changelog.txt  configure.ac
tags/1.4.1/src/: CUSBCommunication.h
tags/1.4/config/: atmega1280.xml
tags/1.4/src/: CAvrProgCommands.h  CUSBCommunication.cpp  ExceptionBase.h
trunk/: 60-avrprog.rules  Makefile.am  changelog.txt  configure.ac  man.txt.in
trunk/config/: atmega16.xml
trunk/src/: CAVRDevice.cpp  CAVRDevice.h  CAVRprog.cpp  CAvrProgCommands.cpp  CAvrProgCommands.h  CHexFile.h  CLArgumentException.h  CMemoryOptions.cpp  CUSBCommunication.cpp  CUSBCommunication.h  ExceptionBase.cpp  avrprog.h  main.cpp
